stylesheet.css
html {
  --button-width: 55px;
}

body {
  background-color: grey;
}

.calculator {
  display: grid;
  grid-template-columns: 171px 110px 50px;
}

#screen {
  grid-column-start: 1;
  grid-column-end: 3;
  border-style: solid;
  text-align: right;
  padding-right: 5px;
}

.numbers {
  display: grid;
  grid-template-columns: repeat(3, var(--button-width));
  grid-row-start: 2;
}

#button0 {
  grid-column-start: 1;
  grid-column-end: 3;
}

.operators {
  display: grid;
  grid-template-columns: repeat(2, var(--button-width));
  grid-row-start: 2;
}

#eql {
  grid-column-start: 1;
  grid-column-end: 3;
}

.calc {
  grid-row-start: 2;
  margin-left: 20px;
}

#clr {
  height: 100%;
}

